# okinawa.cpp

./: .clang-format  .clang-tidy  .clangd  .conanrc  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  conanfile-package.txt  conanfile.dev.txt  conanfile.py  conanfile.txt  readme.md
assets/shaders/: fragmentshader.frag.glsl  vertexshader.vert.glsl
src/: main.cpp
src/config/: config.cpp  config.hpp
src/core/: camera.cpp  camera.hpp  core.cpp  core.hpp  gl_config.hpp  object.cpp  object.hpp
src/handlers/: scenes.cpp  scenes.hpp  textures.cpp  textures.hpp
src/importers/: wavefront.cpp  wavefront.hpp
src/input/: input.cpp  input.hpp  keys.cpp  keys.hpp
src/item/: group.cpp  group.hpp  item.cpp  item.hpp  texture.cpp  texture.hpp
src/math/: math.cpp  math.hpp  point.cpp  point.hpp  readme.md  rotation.cpp  rotation.hpp
src/scene/: scene.cpp  scene.hpp
src/shaders/: shaders.cpp  shaders.hpp  simplefragmentshader.frag.glsl  simplevertexshader.vert.glsl
src/utils/: assets.cpp  assets.hpp  files.cpp  files.hpp  logger.cpp  logger.hpp  strings.cpp  strings.hpp
tests/: ok-config-test.cpp  ok-files-test.cpp  ok-logger-test.cpp  ok-math-test.cpp  ok-point-test.cpp  ok-rotation-test.cpp  ok-shaders-test.cpp  ok-strings-test.cpp  test-file.txt  test-opengl.hpp
